// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartCount Component matches the snapshot 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="19"
      timeout={
        Object {
          "enter": 500,
          "exit": 500,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__CountDot>
        19
      </CartCount__CountDot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`CartCount Component updates via props 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="19"
      timeout={
        Object {
          "enter": 500,
          "exit": 500,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__CountDot>
        19
      </CartCount__CountDot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`CartCount Component updates via props 2`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="45"
      timeout={
        Object {
          "enter": 500,
          "exit": 500,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__CountDot>
        45
      </CartCount__CountDot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;
